<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/shared_images"
        android:title="@string/shared_images"
        app:showAsAction="never" />

    <item
        android:id="@+id/send_notifications"
        android:title="@string/send_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/end_all_timers"
        android:title="@string/end_all_timers"
        app:showAsAction="never" />

    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>