<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/filterView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/filled_light_grey"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="6dp"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:contentDescription="@string/image_place_holder_text"
                        app:srcCompat="@drawable/ic_search_black_24dp" />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/searchBoxEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        app:met_floatingLabel="none"
                        app:met_hideUnderline="true" />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <ImageView
                        android:id="@+id/cancel"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:contentDescription="@string/image_place_holder_text"
                        app:srcCompat="@drawable/met_ic_clear" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewForCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                tools:ignore="UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="applyFilterClicked"
                android:text="@string/apply_filter" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recViewForImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>